# winhacplusplus

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.txt  README.md  rebuild.sh
cmake/modules/: DebugInfo.cmake  FindBoost.cmake  FindHepMC.cmake  FindLHAPDF.cmake  FindPythia8.cmake  FindROOT.cmake  FindXerces.cmake  ReadBuildProperties.cmake  UseDoxygen.cmake
config/: build.properties
farm/: combine.sh  make_jobs.sh  pbs.properties  run_jobs.sh  stop_jobs.sh
farm/jobs/1/: run_it.sh
farm/jobs/10/: run_it.sh
farm/jobs/2/: run_it.sh
farm/jobs/2/input/: InputData.xml  UserFile.xml_backup
farm/jobs/3/: run_it.sh
farm/jobs/3/input/: InputData.xsd  UserFile.xml
farm/jobs/4/: run_it.sh
farm/jobs/4/input/: ParticleDataBase.xsd
farm/jobs/5/: run_it.sh
farm/jobs/6/: run_it.sh
farm/jobs/7/: run_it.sh
farm/jobs/7/input/: ParticleData.xml  UserFile_pdfBackup.xml  parser.py
farm/jobs/8/: run_it.sh
farm/jobs/9/: run_it.sh
input/: InputData.xml  InputData.xsd  UserFile.xml  UserFile.xsd
input.backup/: InputData.xml  InputData.xsd  ParticleDataBase.xml  UserFile.xml
input.backup/pythia/: pythiaFullSetup.cmnd
input/pythia/: pythiaFullSetup.cmnd
lib/: build_xerces.sh
output/: InputEcho.xml  MonitorsBackup.bak  XSections.bak  generator.bak  histograms.root  histogramsBak.root  summary.txt
src/: CMakeLists.txt  Demo.cpp  Sample.lhe
src/demo/: Demo.cpp  DemoPythia.cpp
src/utils/: CMakeLists.txt  FortranFunction.h  Functions.cpp  Functions.h  Matrix.h  Matrix.hpp  RandGenerator.cpp  RandGenerator.h  SpecialMatrix.cpp  SpecialMatrix.h
src/utils/CLHEP/Random/Random/: EngineFactory.h  MTwistEngine.h  RandomEngine.h  Ranlux64Engine.h  RanluxEngine.h  SeedTable2.h
src/utils/CLHEP/Random/src/: DoubConv.cc  EngineFactory.cc  MTwistEngine.cc  RandomEngine.cc  Ranlux64Engine.cc  RanluxEngine.cc  SeedTable2.cpp
src/utils/CLHEP/Units/Units/: PhysicalConstants.h  SystemOfUnits.h
src/utils/CLHEP/Vector/Vector/: AxisAngle.h  AxisAngle.icc  Boost.h  Boost.icc  BoostX.h  BoostY.h  BoostZ.h  EulerAngles.h  LorentzRotation.h  LorentzVector.h  LorentzVector.icc  Rotation.h  RotationInterfaces.h  RotationX.h  RotationX.icc  RotationY.h  RotationY.icc  RotationZ.h  RotationZ.icc  ThreeVector.h  TwoVector.h
src/utils/CLHEP/Vector/src/: AxisAngle.cc  Boost.cc  BoostX.cc  BoostY.cc  BoostZ.cc  EulerAngles.cc  LorentzRotation.cc  LorentzRotationC.cc  LorentzRotationD.cc  LorentzVector.cc  LorentzVectorB.cc  LorentzVectorC.cc  LorentzVectorK.cc  LorentzVectorL.cc  LorentzVectorR.cc  Rotation.cc  RotationA.cc  RotationC.cc  RotationE.cc  RotationIO.cc  RotationInterfaces.cc  RotationL.cc  RotationP.cc  RotationX.cc  RotationY.cc  RotationZ.cc  SpaceVector.cc  SpaceVectorD.cc  SpaceVectorP.cc  SpaceVectorR.cc  ThreeVector.cc  ThreeVectorR.cc  TwoVector.cc  ZMinput.cc  ZMxpv.cc
src/utils/FOAM/: Makefile  ROOT_DEF.h  TFDISTR.cxx  TFDISTR.h  TFHST.cxx  TFMAXWT.cxx  TFMAXWT.h  TFOAM.cxx  TFOAM.h  TRandf.cxx  TRandf.h
src/utils/SANC/: wh_ewcdec.f  wh_ewcdec.h
src/utils/SANC/ewcdec/: B0D_gen.f  B0F_gen.f  B0P_gen.f  BFF_gen.f  C0IR.f  C0IRF.f  C0_gen.f  JintW.f  W_dec.f  W_decay_main.f  bse_bc.f  bse_fc.f  delta_r.f  dhardc.f  eett_aux.f  fermse.f  ineett.f  xspenz.f
src/utils/farm/: Combine.cpp
src/utils/pythia/: EventAnalizer.cpp  EventAnalizer.h  PythiaThread.h  RandomEngineAdapter.h
src/vinhac/: BeamHandler.cpp  BeamHandler.h  BeamParticle.cpp  BeamParticle.h  CMakeLists.txt  DataSource.h  DemoAnalysisHandler.cpp  DemoAnalysisHandler.h  ElementFinder.cpp  ElementFinder.h  Event.cpp  Event.h  HardProcessHandler.cpp  HardProcessHandler.h  InitializationHandler.cpp  InitializationHandler.h  Manager.cpp  Manager.h  ModelHandler.cpp  ModelHandler.h  MonitorHandler.cpp  MonitorHandler.h  PDF.h  PDF_LHA.cpp  PDF_LHA.h  PDF_NoPDF.cpp  PDF_NoPDF.h  PDF_Simple.cpp  PDF_Simple.h  Particle.cpp  Particle.h  ProcessHandler.h  Reader.h  VinhacException.cpp  WINHAC.cpp  WINHAC.h  WeightMonitor.cpp  WeightMonitor.h  XercescReader.cpp  XercescReader.h  (+3 more)
src/vinhac/core/: BeamParticle.cpp  BeamParticle.h  Event.cpp  Event.h  Manager.cpp  Manager.h  Particle.cpp  Particle.h  VinhacException.cpp  VinhacException.h  WINHAC.cpp  WINHAC.h
src/vinhac/core/enum/: AlphaSchemeDefinition.h  FactorizationScaleDefinition.h  FrameDefinition.h  PDFInterfaceDefinition.h  PolarizationDefinition.h  PrintOutLevelDefinition.h  RadiativeCorrectionDefinition.h  WeightsDefinition.h  WidthSchemeDefinition.h
src/vinhac/demo/: DemoAnalysisHandler.cpp  DemoAnalysisHandler.h
src/vinhac/handlers/: BeamHandler.cpp  BeamHandler.h  FrameTransformationHandler.cpp  FrameTransformationHandler.h  HardProcessHandler.cpp  HardProcessHandler.h  InitializationHandler.cpp  InitializationHandler.h  ModelHandler.cpp  ModelHandler.h  MonitorHandler.cpp  MonitorHandler.h  ProcessHandler.h  QCDHandler.cpp  QCDHandler.h  WeightMonitor.cpp  WeightMonitor.h  ppWintegrand.cpp  ppWintegrand.h
src/vinhac/input/: DataSource.cpp  DataSource.h  ElementFinder.cpp  ElementFinder.h  Reader.h  XercescErrorHandler.cpp  XercescErrorHandler.h  XercescReader.cpp  XercescReader.h  helper-classes.cc
src/vinhac/interfaces/: LHEWriter.cpp  LHEWriter.h
src/vinhac/model/: MatrixElement.cpp  MatrixElement.h
src/vinhac/model/amplitudes/: Born.cpp  Born.h  SingleRadiation.cpp  SingleRadiation.h
src/vinhac/model/util/: CommonUtil.cpp  CommonUtil.h  SpinorialFunction.cpp  SpinorialFunction.h  VectorUtil.cpp  VectorUtil.h  YFSUtil.cpp  YFSUtil.h
src/vinhac/pdf/: PDF.h  PDF_LHA.cpp  PDF_LHA.h  PDF_NoPDF.cpp  PDF_NoPDF.h  PDF_Simple.cpp  PDF_Simple.h
src/vinhac/util/: Commons.cpp  Commons.h  Transformation.cpp  Transformation.h
test/born-ps-had/W+-/mu/: UserFile.xml
test/born-ps-had/W+/e/: UserFile.xml
test/born-ps-had/W+/e-mu/: UserFile.xml
test/born-ps-had/W-/e-mu/: UserFile.xml
test/born-ps-had/W-/mu/: UserFile.xml
test/born-ps/W+-/e-mu/: UserFile.xml
vpproject/: VINHAC.vpp  VINHAC.vpppath  VINHAC.vpp~1  VINHAC.vpp~3  VINHAC.vpp~4
vpproject/diagrams/: Class Diagram1.vpclassd  VINHAC.vpclassd  VINHAC1.vpclassd
(+50 files in other folders)
